--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,26 +43,32 @@ android {
     buildFeatures {
         compose true
     }
+    packagingOptions {
+        /*excludes "META-INF/AL2.0"
+        excludes "META-INF/LGPL2.1"*/
+        resources.excludes.add("META-INF/*")
+    }
 }
 
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.core:core-ktx:1.6.0' //done
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     def app_compat = "1.3.1"
-    implementation "androidx.appcompat:appcompat:$app_compat"
+    implementation "androidx.appcompat:appcompat:$app_compat" //done
 
-    def material = "1.2.1"
+    def material = "1.4.0"
     implementation "com.google.android.material:material:$material"
 
     def constraint_layout = "2.1.1"
-    implementation "androidx.constraintlayout:constraintlayout:$constraint_layout"
+    implementation "androidx.constraintlayout:constraintlayout:$constraint_layout" //done
 
     def androidx_ui = "1.0.0-alpha07"
-    implementation "androidx.ui:ui-tooling:$androidx_ui"
+    implementation "androidx.ui:ui-tooling:$androidx_ui" //done
 
-    def compose_version = "1.0.0-alpha08"
+    def compose_version = "1.0.4"  //done
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.foundation:foundation:$compose_version"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
@@ -71,29 +77,58 @@ dependencies {
     implementation "androidx.compose.material:material-icons-core:$compose_version"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
-    def compose_constraint = "1.0.0-beta02"
+    def compose_constraint = "1.0.0-rc01"  //done
     implementation "androidx.constraintlayout:constraintlayout-compose:$compose_constraint"
 
-    def compose_activity = "1.3.1"
+    def compose_activity = "1.3.1"  //done
     implementation "androidx.activity:activity-compose:$compose_activity"
 
-    def nav_version = "2.3.5"
+    def nav_version = "2.3.5" //done
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    def retrofit = "2.9.0"
+    def retrofit = "2.9.0" //done
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
 
-    def hilt = "2.37"
+    def hilt = "2.38.1" //done
     implementation "com.google.dagger:hilt-android:$hilt"
     kapt "com.google.dagger:hilt-android-compiler:$hilt"
+    kapt "com.google.dagger:hilt-compiler:$hilt"
+
+    /*def hilt_lifecycle_viewmodel = "1.0.0" //done
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_lifecycle_viewmodel"
+    kapt "androidx.hilt:hilt-compiler:$hilt_lifecycle_viewmodel"*/
 
     def hilt_lifecycle_viewmodel = "1.0.0-alpha03"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_lifecycle_viewmodel"
     kapt "androidx.hilt:hilt-compiler:$hilt_lifecycle_viewmodel"
 
-    def glide = "4.11.0"
+    def glide = "4.11.0" //done
     implementation "com.github.bumptech.glide:glide:$glide"
     kapt "com.github.bumptech.glide:compiler:$glide"
+
+    def okHttp = "4.9.0" //done
+    implementation"com.squareup.okhttp3:okhttp:$okHttp"
+
+    def leak_canary = "2.5" //done
+    implementation "com.squareup.leakcanary:leakcanary-android:$leak_canary"
+
+    def room =  "2.3.0" //done
+    implementation "androidx.room:room-runtime:$room"
+    implementation "androidx.room:room-ktx:$room"
+    kapt "androidx.room:room-compiler:$room"
+
+    def junit_jupiter = "5.7.0" //done
+    implementation "org.junit.jupiter:junit-jupiter-api:$junit_jupiter"
+    implementation "org.junit.jupiter:junit-jupiter-engine:$junit_jupiter"
+
+    def datastore = "1.0.0" //done
+    implementation "androidx.datastore:datastore-preferences:$datastore"
+
+    /*def accompanist_coil = "0.7.0" //done
+    implementation "com.google.accompanist:accompanist-coil:$accompanist_coil"
+*/
+   /* def nav_compose = "2.4.0-alpha10"
+    implementation "androidx.navigation:navigation-compose:$nav_compose"*/
 }
